# ai-assert

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ai_assert.py  pyproject.toml
.github/workflows/: test.yml
examples/: basic_usage.py
tests/: test_ai_assert.py
